--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.10.0
 certifi==2025.8.3
+charset-normalizer==3.4.3
 click==8.3.0
 distro==1.9.0
 dnspython==2.8.0
@@ -8,32 +9,44 @@ email-validator==2.3.0
 fastapi==0.117.1
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.2.0
+filelock==3.19.1
+fsspec==2025.9.0
 git-filter-repo==2.47.0
 h11==0.16.0
+hf-xet==1.1.10
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
+huggingface-hub==0.35.1
 idna==3.10
 Jinja2==3.1.6
 jiter==0.11.0
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+numpy==2.3.3
+ollama==0.5.4
 openai==1.108.1
+packaging==25.0
 pydantic==2.11.9
 pydantic_core==2.33.2
 Pygments==2.19.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+regex==2025.9.18
+requests==2.32.5
 rich==14.1.0
 rich-toolkit==0.15.1
 rignore==0.6.4
+safetensors==0.6.2
 sentry-sdk==2.38.0
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.48.0
+tokenizers==0.22.1
 tqdm==4.67.1
+transformers==4.56.2
 typer==0.19.2
 typing-inspection==0.4.1
 typing_extensions==4.15.0
